--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+getopts = "0.2.21"
+phf = { git = "https://github.com/sfackler/rust-phf", rev = "6e1f6ac9b1f9", features = ["macros"] }
